--- a/Petini_Capston_Mini/package.json
+++ b/Petini_Capston_Mini/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^15.0.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "chart.js": "^3.1.1",
+    "echarts": "^5.4.1",
     "firebase": "^9.17.1",
     "mdb-angular-ui-kit": "^4.0.0",
     "ngx-dropzone": "^3.1.0",
+    "ngx-echarts": "^15.0.2",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
